compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__bit_arrays__bit_array4.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/bit_arrays.rs
assertion_line: 70
expression: "fn x() { 1 }\npub fn main() {\n  let a = <<x():int>>\n  a\n}\n"
snapshot_kind: text
---
----- SOURCE CODE
fn x() { 1 }
pub fn main() {
  let a = <<x():int>>
  a
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).

-file("project/test/my/mod.gleam", 1).
-spec x() -> integer().
x() ->
    1.

-file("project/test/my/mod.gleam", 2).
-spec main() -> bitstring().
main() ->
    A = <<(x())/integer>>,
    A.
