compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__bit_arrays__bit_array_declare_and_use_var.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/bit_arrays.rs
assertion_line: 124
expression: "pub fn go(x) {\n  let assert <<name_size:8, name:bytes-size(name_size)>> = x\n  name\n}"
snapshot_kind: text
---
----- SOURCE CODE
pub fn go(x) {
  let assert <<name_size:8, name:bytes-size(name_size)>> = x
  name
}

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([go/1]).

-file("project/test/my/mod.gleam", 1).
-spec go(bitstring()) -> bitstring().
go(X) ->
    {Name_size@1, Name@1} = case X of
        <<Name_size:8, Name:Name_size/binary>> -> {Name_size, Name};
        _assert_fail ->
            erlang:error(#{gleam_error => let_assert,
                        message => <<"Pattern match failed, no pattern matched the value."/utf8>>,
                        file => <<?FILEPATH/utf8>>,
                        module => <<"my/mod"/utf8>>,
                        function => <<"go"/utf8>>,
                        line => 2,
                        value => _assert_fail,
                        start => 17,
                        'end' => 75,
                        pattern_start => 28,
                        pattern_end => 71})
    end,
    Name@1.
