compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__bit_arrays__bit_array_discard1.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/bit_arrays.rs
assertion_line: 110
expression: "\npub fn bit_array_discard(x) -> Bool {\n case x {\n  <<_discardme:utf8, rest:bytes>> -> True\n   _ -> False\n }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn bit_array_discard(x) -> Bool {
 case x {
  <<_discardme:utf8, rest:bytes>> -> True
   _ -> False
 }
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([bit_array_discard/1]).

-file("project/test/my/mod.gleam", 2).
-spec bit_array_discard(bitstring()) -> boolean().
bit_array_discard(X) ->
    case X of
        <<_/utf8, Rest/binary>> ->
            true;

        _ ->
            false
    end.
