compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__bit_arrays__bit_array_literal_string_is_treated_as_utf8.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/bit_arrays.rs
assertion_line: 166
expression: "\npub fn main() {\n  <<\"hello\", \" \", \"world\">>\n}"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  <<"hello", " ", "world">>
}

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).

-file("project/test/my/mod.gleam", 2).
-spec main() -> bitstring().
main() ->
    <<"hello"/utf8, " "/utf8, "world"/utf8>>.
